# rl-environments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
environments/battleship/: battleship.py  emulator.py  models.py  pyproject.toml  readme.md
environments/battleship/outputs/evals/battleship--anthropic--claude-sonnet-4/14a280a9/: metadata.json  results.jsonl
environments/battleship/outputs/evals/battleship--anthropic--claude-sonnet-4/20ab21b0/: metadata.json  results.jsonl
environments/battleship/outputs/evals/battleship--anthropic--claude-sonnet-4/da518c9a/: metadata.json  results.jsonl
environments/battleship/scripts/: data_gen.py  eval.py  grpo.py  sft.py
environments/rust_review/: README.md  pyproject.toml  vf_rust_review.py
environments/rust_review/outputs/evals/rust_review--anthropic--claude-sonnet-4/08cbbec2/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--moonshotai--kimi-k2-0905/c53eadfd/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-4.1-mini/2893ceff/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-4.1-mini/9303d0aa/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/1918d3c4/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/49db1e16/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/5f63bc42/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/7a783bff/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/84d22387/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/87a4dbf3/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5-codex/8fc9a7df/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--openai--gpt-5/060fd7a2/: metadata.json  results.jsonl
environments/rust_review/outputs/evals/rust_review--qwen--qwen3-coder-flash/e364fc78/: metadata.json  results.jsonl
environments/rust_review/rust_review/: __init__.py  crystalbleu_local.py  custom_parser.py  rust_review.py  utils.py
environments/rust_review/scripts/: data_backup.py  data_gen.py  data_merge.py  data_split.py  grpo.py
environments/twenty_questions/: README.md  data.json  data_categorized.json  generate_targets.py  pyproject.toml  tt.py  twenty_questions.py
environments/twenty_questions/outputs/evals/twenty-questions--anthropic--claude-sonnet-4/0775b8a4/: metadata.json  results.jsonl
environments/twenty_questions/outputs/evals/twenty-questions--anthropic--claude-sonnet-4/19204742/: metadata.json  results.jsonl
environments/twenty_questions/outputs/evals/twenty-questions--anthropic--claude-sonnet-4/404ca2cc/: metadata.json  (+1 more)
environments/twenty_questions/scripts/: grpo.py  kill_test.py
examples/template/: pyproject.toml
(+85 files in other folders)
