[project]
name = "battleship"
description = "Environment for the classic game Battleship"
tags = ["game", "multi-turn"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["battleship.py", "emulator.py"]