[project]
name = "rust-review"
description = "Review rust code"
tags = ["code", "rust", "single-turn"]
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentence-transformers>=5.1.0",
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "rust_review/*.py",
]
