[project]
name = "twenty-questions"
description = "Multi-turn game where models try to guess a secret word/object by asking strategic yes/no questions within 20 turns."
tags = ["multi-turn", "game"]
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "prime-cli>=0.3.8",
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["twenty_questions.py"]
