[project]
name = "environment-name"
description = "Environment description"
tags = ["tag1", "tag2", "tag3"]
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["environment_name.py"]